# straightjacket

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  ORIGINS.md  README.md  SECURITY.md  clean.py  config.yaml  emotions.yaml  engine.yaml  prompts.yaml  pyproject.toml  requirements.txt  roadmap-v12.md  run.py  strings.yaml
data/: .gitignore  .gitignore.txt  adventure_crafter.json  data.py  download_datasworn.py  mythic_gme_2e.json
data/settings/: classic.yaml  delve.yaml  starforged.yaml  sundered_isles.yaml
docs/: roadmap-v6.md
elvira/: elvira.py  elvira_config.yaml
elvira/elvira_bot/: ai_helpers.py  creation.py  display.py  invariants.py  models.py  quality_checks.py  recorder.py  runner.py  ws_runner.py
emotions/: disposition_map.yaml  importance.yaml  keyword_boosts.yaml
engine/: act_progress.yaml  activation_scores.yaml  adventure_crafter.yaml  ai_text.yaml  architect.yaml  bonds.yaml  chaos.yaml  chapter.yaml  chapter_validator.yaml  consequence_templates.yaml  correction.yaml  creation.yaml  creativity_seeds.yaml  damage.yaml  death_emotions.yaml  description_dedup.yaml  disposition.yaml  effect_resolver.yaml  engine_moves.yaml  enums.yaml  fate.yaml  fuzzy_match.yaml  impacts.yaml  information_gate.yaml  keyed_scenes.yaml  legacy.yaml  location.yaml  memory.yaml  metadata_voting.yaml  momentum.yaml  monologue_detection.yaml  move_availability.yaml  move_categories.yaml  move_outcomes.yaml  move_routing.yaml  naming.yaml  narrative_direction.yaml  narrator_status_descriptions.yaml  npc.yaml  opening.yaml  (+32 more)
prompts/: architect.yaml  blocks.yaml  brain.yaml  chapter_validator.yaml  director.yaml  narrator.yaml  tasks.yaml  validator.yaml
src/straightjacket/: __init__.py  app.py  app_ws.py  custom_head.html  i18n.py  strings_loader.py
src/straightjacket/engine/: __init__.py  bootstrap_log.py  config_loader.py  correction.py  director.py  emotions_loader.py  engine_config.py  engine_loader.py  (+22 more)
strings/: actions.yaml  advance.yaml  consequence.yaml  correction.yaml  creation.yaml  disposition.yaml  effect.yaml  epilogue.yaml  error.yaml  game.yaml  momentum.yaml  move.yaml  position.yaml  result.yaml  stat.yaml  status.yaml  story.yaml  succession.yaml  time.yaml  ui.yaml
tests/: _helpers.py  _mocks.py  conftest.py  test_adventure_crafter.py  test_architect.py  test_architect_validator.py  test_available_moves.py  test_chapter_summary.py  test_chapter_validator.py  test_chapters.py  test_config_loader.py  test_consequence_sentences.py  test_consequences.py  test_correction_flow.py  test_coverage.py  test_creation.py  test_db.py  test_director.py  test_elvira.py  test_elvira_imports.py  test_engine.py  test_engine_loader.py  test_engine_memories.py  test_fate.py  test_game_start.py  test_gate.py  test_impacts.py  test_integration.py  test_invariants.py  test_json_utils.py  test_keyed_scenes.py  test_legacy.py  test_metadata.py  test_models.py  test_move_outcome.py  test_moves.py  test_npc.py  test_npc_naming.py  test_oracle.py  test_parser.py  (+24 more)
tests/elvira/: batch_report.json  batch_report.txt  elvira.py  elvira_batch.py  elvira_config.yaml  elvira_prompts.yaml  elvira_session_20260410_2222_full.json  elvira_session_20260411_0159.json  elvira_session_20260411_0159_full.json  elvira_session_20260411_0200.json  elvira_session_20260411_0200_full.json
tests/model_eval/: cases.yaml  eval.py  model_eval_results.json
tests/playerbot elvira/: elvira_config.yaml
(+104 files in other folders)
